attempted fix at safari pushing up entire app covering nav bar. Done by making top nav fixed to the top, and adding margin to both main body page components.

--- a/src/Style/_PickGenrePage.scss
+++ b/src/Style/_PickGenrePage.scss
@@ -16,7 +16,7 @@ $input-font-size: 25px;
     align-items: center;
     width: 100%;
     height: 100%;
-
+    margin-top: 100px;
     #genreHeader {
         font-size: 40px;
         margin-top: 0;
