--- a/src/Style/_Player.scss
+++ b/src/Style/_Player.scss
@@ -5,42 +5,42 @@
     max-height: 100vh;
     overflow: hidden;
     @media (min-height: 600px) {
-        margin-top: 0px;
-    }
-    @media (min-height: 650px) {
-        margin-top: 0px;
-    }
-    @media (min-height: 700px) {
-        margin-top: 40px;
-    }
-    @media (min-height: 750px) {
-        margin-top: 70px;
-    }
-    @media (min-height: 800px) {
-        margin-top: 80px;
-    }
-    @media (min-height: 850px) {
         margin-top: 100px;
     }
-    @media (min-height: 900px) {
-        margin-top: 150px;
+    @media (min-height: 650px) {
+        margin-top: 100px;
     }
-    @media (min-height: 950px) {
+    @media (min-height: 700px) {
+        margin-top: 140px;
+    }
+    @media (min-height: 750px) {
+        margin-top: 170px;
+    }
+    @media (min-height: 800px) {
         margin-top: 180px;
     }
-    @media (min-height: 1000px) {
-        margin-top: 220px;
+    @media (min-height: 850px) {
+        margin-top: 200px;
     }
-    @media (min-height: 1050px) {
+    @media (min-height: 900px) {
         margin-top: 250px;
     }
+    @media (min-height: 950px) {
+        margin-top: 280px;
+    }
+    @media (min-height: 1000px) {
+        margin-top: 320px;
+    }
+    @media (min-height: 1050px) {
+        margin-top: 350px;
+    }
     @media (min-height: 1100px) {
-        margin-top: 310px;
+        margin-top: 410px;
     }
     @media (min-height: 1150px) {
-        margin-top: 340px;
+        margin-top: 440px;
     }
     @media (min-height: 1200px) {
-        margin-top: 370px;
+        margin-top: 470px;
     }
 }
