--- a/src/Style/_TopNav.scss
+++ b/src/Style/_TopNav.scss
@@ -12,6 +12,8 @@ $offWhite: #F0F0F0;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: fixed;
+    top: 0;
     // border: 1px solid black;
     #swipo-logo {
         width: 15vw;
